policies/restrict-mcp-tools.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-mcp-tools
spec:
  evaluation:
    mode: Envoy
  variables:
    - name: mcpReq
      expression: mcp.Parse(object.attributes.request.http.body)
    - name: isK8sToolCall
      expression: variables.mcpReq.ToolCall.Name.matches('k8s_*')
    - name: jwks
      expression: jwks.Fetch("http://keycloak.keycloak.svc.cluster.local/realms/master/protocol/openid-connect/certs")
    - name: jwtString
      expression: object.attributes.request.http.headers["authorization"].split(" ")[1]
    - name: decodedJwt
      expression: jwt.Decode(variables.jwtString, variables.jwks)
    - name: userGroup
      expression: variables.decodedJwt.Claims["groups"][0]
    - name: allowedTools
      expression: |
        variables.mcpReq.ToolCall.Name in ["k8s_create_resource_from_url", "k8s_get_resources", "k8s_get_pod_logs"]
  matchConditions:
    - expression: |
        mcp.Parse(object.attributes.request.http.body).Method == mcp.ToolsCallMethod
      name: isToolsCall
  validations:
    - expression: |
        has(variables.jwtString) &&
        variables.decodedJwt.Valid &&
          (variables.userGroup == "kube-dev" && variables.allowedTools ||
          variables.userGroup == "kube-admin") ?
            envoy.Allowed().Response() : envoy.Denied(403).Response()
